boot/zfs: fix gang block reading code

- use correct size (512) while reading a gang block
- skip holes while reading child blocks
- advance buffer pointer while reading child blocks

PR:		144214
MFC after:	10 days


git-svn-id: svn+ssh://svn.freebsd.org/base/head@208610 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f